# v2rayn-config-manager

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_MIHOMO.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  MIHOMO_UPDATE_GUIDE.md  Makefile  Makefile.rust  PROJECT_STRUCTURE.md  QUICK_START.md  QUICK_START_CLI.md  README-CLI.md  README-GUI.md  README-RUST.md  README.md  README_CN.md  RUST_BENEFITS.md  RUST_VERSION_SUMMARY.md  SETUP.md  VERIFICATION_REPORT.md  benchmark.sh  build-rust.bat  build-rust.sh  build.bat  build.sh  cm.py  cm_config.json  config.example.json  config.json.example  enable.sh  go.mod  main.go  run-gui.sh  test-full.sh  test-mihomo.sh  update.sh  (+2 more)
.cargo/: config.toml
.git 2/: FETCH_HEAD  config  index
.git 2/logs/: HEAD
.git 2/logs/refs/remotes/origin/: HEAD  main
.git 2/refs/heads/: main
.github/workflows/: build.yml
docs/: SCREENSHOTS.md
pkg/core/: config.go  subscription.go  types.go  updater.go
pkg/gui/: gui.go
src/: cli.rs  config.rs  gui.rs  interactive.rs  lib.rs  main.rs  subscription.rs  types.rs  updater.rs
